[workspace]
members = [
    "runner",
    "cmanager",
    "nethelper",
    "cgraph",
    "common",
    "matrix",
    "netgraph",
    "bwsync",
    "dockhelper",
    "exmanager",
    "reporter",
    "reptest",
    "monitor",
]


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0.136", features = ["derive"] }
bytes = "1.1.0"
async-trait = "0.1.59"
rand = "0.8.5"
clap = { version = "4.0.32", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
memoffset = { version = "0.8.0" }
redbpf = { version = "2.3.0", features = ["load"] }
redbpf-macros = { version = "2.3.0" }
redbpf-probes = { version = "2.3.0" }
tracing-subscriber = "0.3.16"
tracing = "0.1"
futures = "0.3"
lockfree = "0.5.1"
libloading = "0.7.3"


# Need to override setting in development mode because it uses
# nightly features and we are in stable.
[profile.dev.package.rustix]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 16
incremental = false
