[package]
name = "cmanager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nethelper = { path = "../nethelper" }
cgraph = { path = "../cgraph" }
common = { path = "../common" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }