[package]
name = "cmanager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nethelper = { path = "../nethelper" }
cgraph = { path = "../cgraph" }
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0.136", features = ["derive"] }
bytes = "1.1.0"
async-trait = "0.1.59"
rand = "0.8.5"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }