[package]
name = "dockhelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
nethelper = { path = "../nethelper" }
# Depends on NetMod because we need to have the binary made
netmod = { path = "../netmod" }
tokio = { workspace = true }
