[package]
name = "emulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netgraph = { path = "../netgraph" }
nethelper = { path = "../nethelper" }
common = { path = "../common" }
dockhelper = { path = "../dockhelper" }
cgraph = { path = "../cgraph" }
matrix = { path = "../matrix" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_millis = "0.1.1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
bytes = "1.1.0"
async-trait = "0.1.59"
roxmltree = "0.17.0"
regex = "1.7.1"