[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = { version = "0.8.0" }
redbpf = { version = "2.3.0", features = ["load"] }
redbpf-macros = { version = "2.3.0" }
redbpf-probes = { version = "2.3.0" }

[build-dependencies]
cargo-bpf = { version = "2.3.0", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "usage"
path = "src/usage/main.rs"
required-features = ["probes"]