[workspace]
members = [
    "monitor"
]

[package]
name = "netmod"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
redbpf = { version = "2.3.0", features = ["load"] }
redbpf-macros = { version = "2.3.0" }
redbpf-probes = { version = "2.3.0" }
tracing-subscriber = "0.3.16"
tracing = "0.1"
futures = "0.3"
# This is SUPER IMPORTANT! It doesn't launch with zero 0.1.3
zero = "=0.1.2"