[package]
name = "reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
redbpf = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
lockfree = { workspace = true }
libloading = { workspace = true }
# This is SUPER IMPORTANT! It doesn't launch with zero 0.1.3
zero = "=0.1.2"