[package]
name = "reporter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
nethelper = { path = "../nethelper" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.59"
clap = { version = "3.2.23", features = ["derive"] }
redbpf = { version = "2.3.0", features = ["load"] }
tracing-subscriber = "0.3.16"
tracing = "0.1"
futures = "0.3"
lockfree = "0.5.1"
libloading = "0.7.3"
bytes = "1.1.0"

# This is SUPER IMPORTANT! It doesn't launch with zero 0.1.3
zero = "=0.1.2"