[package]
name = "reptest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
nethelper = { path = "../nethelper" }
dockhelper = { path = "../dockhelper" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0.136", features = ["derive"] }
bytes = "1.1.0"
async-trait = "0.1.59"
